--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "OrganizedThoughts"
+author: "Dilip"
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+email: "dilip.shivaraju12@gmail.com"
+twitter_username: "DilipThinks"
+github_username: "dilipshivaraju"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
@@ -20,7 +18,7 @@ linkedin_username: "linkedinuser"
 #########################################################################################
 theme: "minima"
 
-rss: rss
+rss: false
 
 kramdown:
   syntax_highlighter_opts:
